syntax = "proto3";
package pb;

option go_package="./gen";

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
}

message PostProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
}

message PostProductResponse {
    Product product = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message GetProductsRequest {
    uint64 skip = 1;
    uint64 take = 2;
}

message GetProductsResponse {
    repeated Product products = 1;
}

message GetProductsByIDsRequest {
    string ids = 1;
}

message GetProductsByIDsResponse {
    repeated Product products = 1;
}

message SearchProductsRequest {
    string query = 1;
    uint64 skip = 2;
    uint64 take = 3;
}

message SearchProductsResponse {
    repeated Product products = 1;
}

service CatalogService {
    rpc PostProduct(PostProductRequest) returns (PostProductResponse){};
    rpc GetProduct(GetProductRequest) returns (GetProductResponse){};
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse){};
    rpc GetProductsByIDs(GetProductsByIDsRequest) returns (GetProductsByIDsResponse){};
    rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse){};
}